yet another z-index fix
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@53928 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -10022,6 +10022,9 @@ div.editLink {
     height: 40px;
     width: 40px;
   }
+  #ilTopBar.ilTopBar {
+    z-index: 1030;
+  }
   .ilMainMenu.ilTopFixed {
     position: fixed;
     top: 40px;
