--- a/templates/default/less/Services/MainMenu/delos_sm.less
+++ b/templates/default/less/Services/MainMenu/delos_sm.less
@@ -17,6 +17,10 @@
 	}
 }
 
+#ilTopBar.ilTopBar {
+	z-index: 1030;
+}
+
 .ilMainMenu.ilTopFixed {
 	position: fixed;
 	top: 40px;
